--- a/src/views/pages/news/data.njk
+++ b/src/views/pages/news/data.njk
@@ -1,3 +1,13 @@
+{% set apogeeInstruments = {
+    title: "Raghav Awarded Campbell Scientific Graduate Fellowship",
+    img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/news/apogeeInstruments.jpg?a=height&w=6&h=6",
+    date: "May 6, 2022",
+    desc: "Raghav Kataria is a PhD student in the KAABiL lab. He is currently working on pathogen-host protein-protein interactions using computational tools and various molecular biology techniques in his research in bioinformatics.
+    Raghav was recently awarded the \"Campbell Scientific Graduate Fellowship\", which is provided by \"Apogee Instruments\".",
+    link: "https://psc.usu.edu/students/assistantships-and-fellowships"
+  }
+%}
+
 {% set newAdminColin = {
     title: "New HPC Admin: Colin Bernhardt",
     img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/profile/colin.jpg?a=height&w=6&h=6",
@@ -131,6 +141,6 @@ benchmark were implement in the DeepHPI webserver",
   }
 %}
 
-{% set general = [newAdminColin,newAndrew,koltonGrant,newDavid,newKolton,citsatdb,newadmin1] %}
+{% set general = [apogeeInstruments, newAdminColin,newAndrew,koltonGrant,newDavid,newKolton,citsatdb,newadmin1] %}
 {% set science = [alfanet,newdeephpi,covidtracker] %}
 {% set media = [heroesNight,nihFunds,saltStress,undergradGrants] %}
