Added news subpage for Campbell Fellowship.

--- a/src/views/pages/news/data.njk
+++ b/src/views/pages/news/data.njk
@@ -4,7 +4,7 @@
     date: "May 6, 2022",
     desc: "Raghav Kataria is a PhD student in the KAABiL lab. He is currently working on pathogen-host protein-protein interactions using computational tools and various molecular biology techniques in his research in bioinformatics.
     Raghav was recently awarded the \"Campbell Scientific Graduate Fellowship\", which is provided by \"Apogee Instruments\".",
-    link: "https://psc.usu.edu/students/assistantships-and-fellowships"
+    link: "/news/apogeeInstruments"
   }
 %}
 
