--- a/src/views/pages/news/apogeeInstruments/content.njk
+++ b/src/views/pages/news/apogeeInstruments/content.njk
@@ -1,4 +1,4 @@
 <p class="blog">
     Raghav Kataria is a PhD student in the KAABiL lab. He is currently working on pathogen-host protein-protein interactions using computational tools and various molecular biology techniques in his research in bioinformatics.
-    Raghav was recently awarded the \"Campbell Scientific Graduate Fellowship\", which is provided by "Apogee Instruments".
+    Raghav was recently awarded the "Campbell Scientific Graduate Fellowship", which is provided by "Apogee Instruments".
 </p>
