--- a/src/views/pages/events/events.njk
+++ b/src/views/pages/events/events.njk
@@ -8,7 +8,7 @@
   {{ navbar("Events") }}
 
   {% from "components/img-header.njk" import imgHeader %}
-  {{ imgHeader() }}
+  {{ imgHeader(headerTitle="Events") }}
 
   {% from "components/breadcrumb.njk" import breadcrumb %}
   {{ breadcrumb([{name: 'Home', link: '/'}, {name: 'Events', link: '/events'}]) }}
