--- a/src/views/pages/publications/publications.njk
+++ b/src/views/pages/publications/publications.njk
@@ -8,7 +8,7 @@
   {{ navbar("Publications") }}
 
   {% from "components/img-header.njk" import imgHeader %}
-  {{ imgHeader() }}
+  {{ imgHeader(headerTitle="Publications") }}
 
   {% from "components/breadcrumb.njk" import breadcrumb %}
   {{ breadcrumb([{name: 'Home', link: '/'}, {name: 'Publications', link: '/publications'}]) }}
