--- a/src/views/pages/research/research-areas/research-areas.njk
+++ b/src/views/pages/research/research-areas/research-areas.njk
@@ -8,7 +8,7 @@
   {{ navbar("Research", "Research Articles") }}
 
   {% from "components/img-header.njk" import imgHeader %}
-  {{ imgHeader() }}
+  {{ imgHeader(headerTitle="Research Areas") }}
 
   {% from "components/breadcrumb.njk" import breadcrumb %}
   {{ breadcrumb([{name: 'Home', link: '/'}, {name: 'Research', link: '/research'}, {name: 'Research Areas', link: '/research/research-areas'}]) }}
