--- a/src/views/pages/research/research.njk
+++ b/src/views/pages/research/research.njk
@@ -9,7 +9,7 @@
   {{ navbar("Research", "Lab Research") }}
 
   {% from "components/img-header.njk" import imgHeader %}
-  {{ imgHeader() }}
+  {{ imgHeader(headerTitle="Research") }}
 
   {% from "components/breadcrumb.njk" import breadcrumb %}
   {{ breadcrumb([{name: 'Home', link: '/'}, {name: 'Research', link: '/research'}]) }}
