Add ellipsis to end of news page, and other small changes.

--- a/src/views/components/news-card.njk
+++ b/src/views/components/news-card.njk
@@ -25,7 +25,9 @@
                 <span class="date"><i class="far fa-calendar-alt"></i> {{news.date}}</span>
                 <h5 class="header mb-0">{{news.title}}</h5>
                 <div class="desc mt-0">
+                  <div class="newsLineTruncate">
                     {{news.desc}}
+                  </div>
                 </div>
               </div>
             </div>
@@ -41,7 +43,9 @@
                 <span class="date"><i class="far fa-calendar-alt"></i> {{news.date}}</span>
                 <h5 class="header mb-0">{{news.title}}</h5>
                 <div class="desc mt-0">
+                  <div class="newsLineTruncate">
                     {{news.desc}}
+                  </div>
                 </div>
               </div>
               <div class="col pe-0 my-auto">
