--- a/src/views/pages/tools/_tool-data.njk
+++ b/src/views/pages/tools/_tool-data.njk
@@ -172,6 +172,6 @@
 {% set dbs = [greeningDB, citSATdb, legumeSSRdb, ranchSAT, alfaNet, weconet, trustdb] %}
 {% set bioenergy = [lacSubPred, ligPred] %}
 {% set metagenomics = [necMiner] %}
-{% set ngsPackages = [ProFeatX] %}
-{% set descriptors = [pySeqRNA] %}
-{% set misc = [rbPred] %}
+{% set ngsPackages = [pySeqRNA] %}
+{% set descriptors = [ProFeatX] %}
+{% set disease = [rbPred] %}
