--- a/src/views/universal/_navbar-options.njk
+++ b/src/views/universal/_navbar-options.njk
@@ -39,7 +39,7 @@
     {name: "NGS Packages", link: "/tools#ngsPack"},
     {name: "Descriptors", link: "/tools#descriptors"},
     {name: "Bioenergy", link: "/tools#bionrg"},
-    {name: "Miscellaneous", link: "/tools#misc"}
+    {name: "Disease Forecasting", link: "/tools#disease"}
   ],
   link: "/tools"
   }
