--- a/src/scss/_export-components.scss
+++ b/src/scss/_export-components.scss
@@ -12,3 +12,5 @@
 @import './components/event-modal';
 @import './components/pub-legend';
 @import './components/card';
+@import './components/img-header';
+@import './components/news-card';
