--- a/src/views/components/img-header.njk
+++ b/src/views/components/img-header.njk
@@ -1,21 +1,10 @@
 {% macro imgHeader(img="header-img",headerTitle="KAABiL Lab") %}
-  <style>
-  .imgHeaderTitle {
-    background-color:rgba(30,144,255,0.8);
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
-    width: fit-content;
-    bottom: 50%;
-    height: 15%;
-    font-size: 11;
-} </style>
 
   <section class="container-fluid px-0">
     <div class="row g-0">
       <div class="col">
         <img class="kbl-header-img" src="{{ RaikouServer }}/{{img}}"/>
-                <h1 class="text-center imgHeaderTitle">
+              <h1 class="text-center imgHeaderTitle imgHeaderGen">
               {{headerTitle}}
               </h1>
         </div>
@@ -27,11 +16,12 @@
 {% macro imgHeaderSplit(img1="header-img", img2="/image/bioinfo/peoplePageTeam.jpg",headerTitle="KAABiL Lab") %}
   <section class="container-fluid px-0">
     <div class="row g-0">
-      <div class="col">
+      <div class="col-6">
         <img class="kbl-header-img" src="{{ RaikouServer }}/{{img1}}"/>
       </div>
-      <div class="col d-none d-md-block">
+      <div class="col-6 d-none d-md-block">
         <img class="kbl-header-img" src="{{ RaikouServer }}/{{img2}}"/>
+        </h1>
       </div>
     </div>
   </section>
