--- a/src/views/pages/home/_multi-carousel-new.njk
+++ b/src/views/pages/home/_multi-carousel-new.njk
@@ -8,13 +8,13 @@
         </div>
       {% endfor %}
     </div>
-    <div class="leftLst carousel-btn">
+    <div class="leftLst carousel-btn" id="leftBtn">
       <span class="fa-stack" style="vertical-align: top;">
         <i class="fas fa-circle fa-stack-2x"></i>
         <i class="fas fa-arrow-left fa-stack-1x fa-inverse"></i>
       </span>
     </div>
-    <div class="rightLst carousel-btn">
+    <div class="rightLst carousel-btn" id="rightBtn">
       <span class="fa-stack" style="vertical-align: top;">
         <i class="fas fa-circle fa-stack-2x"></i>
         <i class="fas fa-arrow-right fa-stack-1x fa-inverse"></i>
