--- a/src/views/pages/news/data.njk
+++ b/src/views/pages/news/data.njk
@@ -144,3 +144,4 @@ benchmark were implement in the DeepHPI webserver",
 {% set general = [apogeeInstruments, newAdminColin,newAndrew,koltonGrant,newDavid,newKolton,citsatdb,newadmin1] %}
 {% set science = [alfanet,newdeephpi,covidtracker] %}
 {% set media = [heroesNight,nihFunds,saltStress,undergradGrants] %}
+{% set latest = [apogeeInstruments,newAdminColin,newAndrew] %}
