--- a/src/views/pages/events/events.njk
+++ b/src/views/pages/events/events.njk
@@ -47,7 +47,7 @@
         <h4 class="kbl-heading text-center">2021</h4>
         <div class="row justify-content-center">
           <div class="col-sm-6">
-            {% set pag2020 = {
+            {% set pag2021 = {
                 link: '/events/trisocietyslc',
                 title: '2021 ASA, CSSA, SSSA International Annual Meeting',
                 location: 'Salt Palace Convention Center, Salt Lake City, UT',
@@ -55,7 +55,7 @@
                 img: '/image/raw/bioinfo/events/trisociety/1.jpg'
               }
             %}
-            {{ eventLink(pag2020) }}
+            {{ eventLink(pag2021) }}
           </div>
           <div class="col-sm-6">
             {% set shelby = {
@@ -193,6 +193,7 @@
     </div>
   </article>
 
+  {% set latest = [koltonCapitolHill,pag2021,shelby,pag2020] %}
   {% include "universal/_footer.njk" %}
   {% from "universal/_footer-scripts.njk" import scripts %}
   {{ scripts() }}
