--- a/src/scss/components/img-header.scss
+++ b/src/scss/components/img-header.scss
@@ -1,7 +1,7 @@
 .imgHeaderGen {
     height: 15%;
     font-size: 11;
-    background-color:rgba(30,144,255,0.8);
+    background-color:tomato;
     position: relative;
     width: fit-content;
     bottom: 15%;
