--- a/src/views/pages/people/rakesh/rakesh.njk
+++ b/src/views/pages/people/rakesh/rakesh.njk
@@ -8,7 +8,7 @@
   {{ navbar("People", "Dr. Rakesh Kaundal") }}
 
   {% from "components/img-header.njk" import imgHeaderSplit %}
-  {{ imgHeaderSplit() }}
+  {{ imgHeaderSplit(headerTitle="Dr. Rakesh Kaundal") }}
 
   {% from "components/breadcrumb.njk" import breadcrumb %}
   {{ breadcrumb([{name: 'Home', link: '/'}, {name: 'People', link: '/people'}, {name: 'Rakesh', link: '/people/rakesh'}]) }}
