--- a/src/scss/components/img-header.scss
+++ b/src/scss/components/img-header.scss
@@ -11,3 +11,9 @@
     margin-left: auto;
     margin-right: auto;
   }
+
+  .imgHeaderTitleSplit {
+    margin-left: auto;
+    margin-right: auto;
+    transform: translateX(25vw);
+  }
