--- a/src/views/pages/people/our-team/our-team.njk
+++ b/src/views/pages/people/our-team/our-team.njk
@@ -8,7 +8,7 @@
   {{ navbar("People", "Our Team") }}
 
   {% from "components/img-header.njk" import imgHeaderSplit %}
-  {{ imgHeaderSplit() }}
+  {{ imgHeaderSplit(headerTitle="Our Team") }}
 
   {% from "components/breadcrumb.njk" import breadcrumb %}
   {{ breadcrumb([{name: 'Home', link: '/'}, {name: 'People', link: '/people'}, {name: 'Our Team', link: '/people/our-team'}]) }}
