--- a/src/scss/components/img-header.scss
+++ b/src/scss/components/img-header.scss
@@ -1,10 +1,17 @@
 .imgHeaderGen {
-    height: 15%;
+    height: 18%;
     font-size: 11;
-    background-color:tomato;
+    background-color: rgba(176, 18, 65,0.80);
+    color: white;
     position: relative;
     width: fit-content;
-    bottom: 15%;
+    background-position: center;
+    bottom: 18%;
+    padding-right: 30px;
+    padding-left: 30px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+
   }
   
   .imgHeaderTitle {
