Iterated colors for news card, decreased space on publications page.

--- a/src/views/components/news-card.njk
+++ b/src/views/components/news-card.njk
@@ -1,6 +1,22 @@
-{% macro mediaCard (media) %}
+{% macro leftMediaCard (media) %}
         <section class="row news-item-container justify-content-center">
-          <a class="news-item col-11" href="{{media.link}}" target="_blank">
+          <a class="news-itemFirst col-11" href="{{media.link}}" target="_blank">
+            <div class="row ps-0">
+              <div class="col px-2 pt-1">
+                <span class="date"><i class="far fa-calendar-alt"></i> {{media.date}}</span>
+                <h5 class="header mb-0">{{media.title}}</h5>
+                <div class="desc mt-0">
+                  {{media.desc}}
+                </div>
+              </div>
+            </div>
+          </a>
+        </section>
+{% endmacro %}
+
+{% macro rightMediaCard (media) %}
+        <section class="row news-item-container justify-content-center">
+          <a class="news-itemSecond col-11" href="{{media.link}}" target="_blank">
             <div class="row ps-0">
               <div class="col px-2 pt-1">
                 <span class="date"><i class="far fa-calendar-alt"></i> {{media.date}}</span>
@@ -16,7 +32,7 @@
 
 {% macro leftNewsCard (news) %}
     <section class="row news-item-container justify-content-center">
-          <a class="news-item col-11" href="{{news.link}}" target="_blank">
+          <a class="news-itemFirst col-11" href="{{news.link}}" target="_blank">
             <div class="row ps-0">
               <div class="col ps-0 my-auto">
                 <img src="{{news.img}}" class="img-fluid">
@@ -37,8 +53,11 @@
 
 {% macro rightNewsCard (news) %}
     <section class="row news-item-container justify-content-center">
-          <a class="news-item col-11" href="{{news.link}}" target="_blank">
+          <a class="news-itemSecond col-11" href="{{news.link}}" target="_blank">
             <div class="row ps-0">
+              <div class="col ps-0 my-auto">
+                <img src="{{news.img}}" class="img-fluid">
+              </div>
               <div class="col-10 pt-1">
                 <span class="date"><i class="far fa-calendar-alt"></i> {{news.date}}</span>
                 <h5 class="header mb-0">{{news.title}}</h5>
@@ -47,9 +66,6 @@
                     {{news.desc}}
                   </div>
                 </div>
-              </div>
-              <div class="col pe-0 my-auto">
-                <img src="{{news.img}}" class="img-fluid">
               </div>
             </div>
           </a>
