--- a/src/views/pages/news/news.njk
+++ b/src/views/pages/news/news.njk
@@ -14,7 +14,7 @@
   {{ breadcrumb([{name: 'Home', link: '/'}, {name: 'News', link: '/news'}]) }}
 
   {% from "./data.njk" import general, science, media %}
-  {% from "components/news-card.njk" import mediaCard, leftNewsCard, rightNewsCard %}
+  {% from "components/news-card.njk" import leftMediaCard, rightMediaCard, leftNewsCard, rightNewsCard %}
 
   <article class="container-fluid px-5 pb-5 pt-1 my-5">
     <div class="row">
@@ -57,8 +57,15 @@
         <section class="text-center col-header mb-1 mb-md-4 mt-4 mt-md-0">
           <b class="col-header-text">Media</b>
         </section>
+        {% set rightEl = false %}
         {% for mediaEl in media %}
-          {{mediaCard(mediaEl)}}
+          {% if rightEl %}
+            {{rightMediaCard(mediaEl)}}
+            {% set rightEl = false %}
+          {% else %}
+            {{leftMediaCard(mediaEl)}}
+            {% set rightEl = true %}
+          {% endif %}
         {% endfor %}
       </article>
 
