Added new papers and conferences to publications page.

--- a/src/views/pages/publications/_data.njk
+++ b/src/views/pages/publications/_data.njk
@@ -1,4 +1,18 @@
 {% set pub2022 = [
+    {
+    authors:'<em><u>Kataria, R.</u></em> and <b>Kaundal, R<sup>*</sup></b>.',
+    content:'A Host-Pathogen Interactome Database for Deciphering Crucial Molecular Networks of Wheat-Common bunt Cross-talk Mechanisms. <em>BMC Plant Methods</em>. IF=5.321. PMCID: <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8910311/" class="kbl-link" target="_blank">8910311</a>',
+    doiLink:'publications?content=pub',
+    doiTitle:'(In Press)',
+    year:'2022'
+  },
+  {
+    authors:'<b>Kaundal, R.</b><sup>$*</sup>, <em><u>Loaiza, C.D.</u></em><sup>$</sup>, <em><u>Duhan, N.</u></em> and Flann, N.',
+    content:'deepHPI: a comprehensive Deep Learning platform for accurate prediction and visualization of host-pathogen protein-protein interactions. <em>Briefings in Bioinformatics</em> bbac125: 1-11. IF=11.622. PMID: <a href="https://pubmed.ncbi.nlm.nih.gov/35511057/" class="kbl-link" target="_blank">35511057</a>',
+    doiLink:'https://doi.org/10.1093/bib/bbac125',
+    doiTitle:'https://doi.org/10.1093/bib/bbac125',
+    year:'2022'
+  },
   {
     authors: '<em><u>Kataria, R.</u></em> and Kaundal, R<sup>*</sup>.',
     content: 'Deciphering the Host-Pathogen Interactome of Wheat-Common bunt system: A Step towards Enhanced Resilience in Next Generation Wheat. <em>International Journal of Molecular Sciences</em> <b>23</b>(5): 2589. <em>PMCID:</em> <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/pmc8910311/" class="kbl-link" target="_blank">8910311</a>.',
