--- a/src/views/pages/publications/subpages/dates/20-22.njk
+++ b/src/views/pages/publications/subpages/dates/20-22.njk
@@ -1,5 +1,26 @@
 {% set pub2022 = [
   {
+    authors:'<b>Kaundal, R<sup>*</sup></b>., <em><u>Duhan, N.</u></em>, Acharya, B.R., Pudussery, M.V., Ferreira, J.F.S., Suarez, D.L. and Sandhu, D<sup>*</sup>.',
+    location:'Conference on Applied Statistics in Agriculture and Natural Resources; Utah State University (USU), Logan (UT), USA',
+    desc:'Transcriptional profiling of two contrasting genotypes uncovers molecular mechanisms underlying salt tolerance in Alfalfa.',
+    date:'May 18',
+    type:'Oral'
+  },
+  {
+    authors:'<em><u>Guevara, D.</u></em> and <b>Kaundal, R<sup>*</sup></b>.',
+    location:'Conference on Applied Statistics in Agriculture and Natural Resources; Utah State University (USU), Logan (UT), USA',
+    desc:'Malivhu: a Web Server for Predicting Human-Virus Protein-Protein Interactions Using Machine Learning Algorithms.',
+    date:'May 18',
+    type:'Oral'
+  },
+  {
+    authors:'<em><u>Duhan, N.</u></em> and <b>Kaundal, R<sup>*</sup></b>.',
+    location:'Conference on Applied Statistics in Agriculture and Natural Resources; Utah State University (USU), Logan (UT), USA',
+    desc:'pySeqRNA: An Automated Python Package for RNA Sequencing Data Analysis.',
+    date:'May 18',
+    type:'Oral'
+  },
+  {
     authors: "<u>Hauck, K.</u> and Kaundal, R<sup>*</sup>.",
     location: "Research on Capitol Hill (RCH) event, Utah Capitol Building; Salt Lake City (UT), USA",
     desc: "Developing Human-Covid Protein-Protein Interactions Atlas for recently emerged SARS-CoV-2 strains: a step towards pan-viral vaccine development.",
